{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 32,
  "lineage": "76fb3195-1a3b-3214-8a3a-29c81c6561da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:internet-gateway/igw-07392e574cfab4b94",
            "id": "igw-07392e574cfab4b94",
            "owner_id": "083787700310",
            "tags": {
              "Name": "vigia-igw"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-igw",
              "Project": "vigia"
            },
            "vpc_id": "vpc-0cab7d0591e26bb36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083787700310:loadbalancer/app/vigia-shared/6f9cad5231c43699",
            "arn_suffix": "app/vigia-shared/6f9cad5231c43699",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vigia-shared-2021458128.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:083787700310:loadbalancer/app/vigia-shared/6f9cad5231c43699",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vigia-shared",
            "preserve_host_header": false,
            "security_groups": [
              "sg-067f40a52a546fe77"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0300916561a416912"
              },
              {
                "subnet_id": "subnet-085b1505e7fb78164"
              }
            ],
            "subnets": [
              "subnet-0300916561a416912",
              "subnet-085b1505e7fb78164"
            ],
            "tags": {
              "Name": "vigia-shared-alb"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-shared-alb",
              "Project": "vigia"
            },
            "vpc_id": "vpc-0cab7d0591e26bb36",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083787700310:listener/app/vigia-shared/6f9cad5231c43699/fe8e44aa7c43fe06",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083787700310:listener/app/vigia-shared/6f9cad5231c43699/fe8e44aa7c43fe06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:083787700310:loadbalancer/app/vigia-shared/6f9cad5231c43699",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Project": "vigia"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.shared",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:route-table/rtb-041d29a83b383b81e",
            "id": "rtb-041d29a83b383b81e",
            "owner_id": "083787700310",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07392e574cfab4b94",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vigia-public-rt"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-public-rt",
              "Project": "vigia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cab7d0591e26bb36"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6816503bece7dda",
            "route_table_id": "rtb-041d29a83b383b81e",
            "subnet_id": "subnet-085b1505e7fb78164"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de522c21782262d0",
            "route_table_id": "rtb-041d29a83b383b81e",
            "subnet_id": "subnet-0300916561a416912"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:security-group/sg-067f40a52a546fe77",
            "description": "Security group for the shared Vigia ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Forward to ECS tasks on port 8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-067f40a52a546fe77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from internet (IPv6)",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from internet (IPv6)",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vigia-alb",
            "name_prefix": "",
            "owner_id": "083787700310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vigia-alb-sg"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-alb-sg",
              "Project": "vigia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cab7d0591e26bb36"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:subnet/subnet-085718e193245542e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085718e193245542e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083787700310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vigia-private-us-east-1a"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-private-us-east-1a",
              "Project": "vigia"
            },
            "vpc_id": "vpc-0cab7d0591e26bb36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:subnet/subnet-0eddeb91617ebbb27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eddeb91617ebbb27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083787700310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vigia-private-us-east-1b"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-private-us-east-1b",
              "Project": "vigia"
            },
            "vpc_id": "vpc-0cab7d0591e26bb36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:subnet/subnet-085b1505e7fb78164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085b1505e7fb78164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083787700310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vigia-public-us-east-1a"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-public-us-east-1a",
              "Project": "vigia"
            },
            "vpc_id": "vpc-0cab7d0591e26bb36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:subnet/subnet-0300916561a416912",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0300916561a416912",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083787700310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vigia-public-us-east-1b"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-public-us-east-1b",
              "Project": "vigia"
            },
            "vpc_id": "vpc-0cab7d0591e26bb36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:vpc/vpc-0cab7d0591e26bb36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da0378c0f847c41a",
            "default_route_table_id": "rtb-0a96e8e3cffa044cc",
            "default_security_group_id": "sg-006bd7438499b62cb",
            "dhcp_options_id": "dopt-0b603101a69532d69",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cab7d0591e26bb36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a96e8e3cffa044cc",
            "owner_id": "083787700310",
            "tags": {
              "Name": "vigia-vpc"
            },
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Name": "vigia-vpc",
              "Project": "vigia"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:security-group-rule/sgr-0c6d2f6daacd8d796",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Forward to ECS tasks on port 8000",
            "from_port": 8000,
            "id": "sgr-0c6d2f6daacd8d796",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067f40a52a546fe77",
            "security_group_rule_id": "sgr-0c6d2f6daacd8d796",
            "tags": null,
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Project": "vigia"
            },
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:security-group-rule/sgr-07f0afdf2938d6635",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from internet",
            "from_port": 80,
            "id": "sgr-07f0afdf2938d6635",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067f40a52a546fe77",
            "security_group_rule_id": "sgr-07f0afdf2938d6635",
            "tags": null,
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Project": "vigia"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:security-group-rule/sgr-04daf083cedf3813c",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "HTTP from internet (IPv6)",
            "from_port": 80,
            "id": "sgr-04daf083cedf3813c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067f40a52a546fe77",
            "security_group_rule_id": "sgr-04daf083cedf3813c",
            "tags": null,
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Project": "vigia"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:security-group-rule/sgr-0708a11abe30176ad",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS from internet",
            "from_port": 443,
            "id": "sgr-0708a11abe30176ad",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067f40a52a546fe77",
            "security_group_rule_id": "sgr-0708a11abe30176ad",
            "tags": null,
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Project": "vigia"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083787700310:security-group-rule/sgr-04220ff91a104cbec",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "HTTPS from internet (IPv6)",
            "from_port": 443,
            "id": "sgr-04220ff91a104cbec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067f40a52a546fe77",
            "security_group_rule_id": "sgr-04220ff91a104cbec",
            "tags": null,
            "tags_all": {
              "Component": "bootstrap",
              "ManagedBy": "terraform",
              "Project": "vigia"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}